// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-tabs navigation should NOT go to next tab on keyboard event Enter 1`] = `
<mg-tabs active-tab="1">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="1" id="id-1" role="tab" tabindex="0">
          batman
        </button>
        <button aria-controls="panel-2" aria-selected="false" class="mg-tabs__navigation-button" data-index="2" id="id-2" role="tab" tabindex="-1">
          joker
        </button>
      </header>
      <article aria-labelledby="id-1" class="mg-tabs__content-container" id="panel-1" role="tabpanel" tabindex="0">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="id-2" class="mg-tabs__content-container" hidden="" id="panel-2" role="tabpanel" tabindex="-1">
        <slot name="tab_content-2"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
</mg-tabs>
`;

exports[`mg-tabs navigation should NOT go to next tab on keyboard event Enter 2`] = `
<mg-tabs active-tab="1">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="1" id="id-1" role="tab" tabindex="0">
          batman
        </button>
        <button aria-controls="panel-2" aria-selected="false" class="mg-tabs__navigation-button" data-index="2" id="id-2" role="tab" tabindex="-1">
          joker
        </button>
      </header>
      <article aria-labelledby="id-1" class="mg-tabs__content-container" id="panel-1" role="tabpanel" tabindex="0">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="id-2" class="mg-tabs__content-container" hidden="" id="panel-2" role="tabpanel" tabindex="-1">
        <slot name="tab_content-2"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
</mg-tabs>
`;

exports[`mg-tabs navigation should NOT go to next tab on keyboard event Enter 3`] = `
<mg-tabs active-tab="1">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="1" id="id-1" role="tab" tabindex="0">
          batman
        </button>
        <button aria-controls="panel-2" aria-selected="false" class="mg-tabs__navigation-button" data-index="2" id="id-2" role="tab" tabindex="-1">
          joker
        </button>
      </header>
      <article aria-labelledby="id-1" class="mg-tabs__content-container" id="panel-1" role="tabpanel" tabindex="0">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="id-2" class="mg-tabs__content-container" hidden="" id="panel-2" role="tabpanel" tabindex="-1">
        <slot name="tab_content-2"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
</mg-tabs>
`;

exports[`mg-tabs navigation should NOT go to next tab on keyboard event Space 1`] = `
<mg-tabs active-tab="1">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="1" id="id-1" role="tab" tabindex="0">
          batman
        </button>
        <button aria-controls="panel-2" aria-selected="false" class="mg-tabs__navigation-button" data-index="2" id="id-2" role="tab" tabindex="-1">
          joker
        </button>
      </header>
      <article aria-labelledby="id-1" class="mg-tabs__content-container" id="panel-1" role="tabpanel" tabindex="0">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="id-2" class="mg-tabs__content-container" hidden="" id="panel-2" role="tabpanel" tabindex="-1">
        <slot name="tab_content-2"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
</mg-tabs>
`;

exports[`mg-tabs navigation should NOT go to next tab on keyboard event Space 2`] = `
<mg-tabs active-tab="1">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="1" id="id-1" role="tab" tabindex="0">
          batman
        </button>
        <button aria-controls="panel-2" aria-selected="false" class="mg-tabs__navigation-button" data-index="2" id="id-2" role="tab" tabindex="-1">
          joker
        </button>
      </header>
      <article aria-labelledby="id-1" class="mg-tabs__content-container" id="panel-1" role="tabpanel" tabindex="0">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="id-2" class="mg-tabs__content-container" hidden="" id="panel-2" role="tabpanel" tabindex="-1">
        <slot name="tab_content-2"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
</mg-tabs>
`;

exports[`mg-tabs navigation should NOT go to next tab on keyboard event Space 3`] = `
<mg-tabs active-tab="1">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="1" id="id-1" role="tab" tabindex="0">
          batman
        </button>
        <button aria-controls="panel-2" aria-selected="false" class="mg-tabs__navigation-button" data-index="2" id="id-2" role="tab" tabindex="-1">
          joker
        </button>
      </header>
      <article aria-labelledby="id-1" class="mg-tabs__content-container" id="panel-1" role="tabpanel" tabindex="0">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="id-2" class="mg-tabs__content-container" hidden="" id="panel-2" role="tabpanel" tabindex="-1">
        <slot name="tab_content-2"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next tab on click event 1`] = `
<mg-tabs active-tab="1">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="1" id="id-1" role="tab" tabindex="0">
          batman
        </button>
        <button aria-controls="panel-2" aria-selected="false" class="mg-tabs__navigation-button" data-index="2" id="id-2" role="tab" tabindex="-1">
          joker
        </button>
      </header>
      <article aria-labelledby="id-1" class="mg-tabs__content-container" id="panel-1" role="tabpanel" tabindex="0">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="id-2" class="mg-tabs__content-container" hidden="" id="panel-2" role="tabpanel" tabindex="-1">
        <slot name="tab_content-2"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next tab on click event 2`] = `
<mg-tabs active-tab="2">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="false" class="mg-tabs__navigation-button" data-index="1" id="id-1" role="tab" tabindex="-1">
          batman
        </button>
        <button aria-controls="panel-2" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="2" id="id-2" role="tab" tabindex="0">
          joker
        </button>
      </header>
      <article aria-labelledby="id-1" class="mg-tabs__content-container" hidden="" id="panel-1" role="tabpanel" tabindex="-1">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="id-2" class="mg-tabs__content-container" id="panel-2" role="tabpanel" tabindex="0">
        <slot name="tab_content-2"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next tab on click event 3`] = `
<mg-tabs active-tab="1">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="1" id="id-1" role="tab" tabindex="0">
          <mg-icon icon="check"></mg-icon>
          Batman
          <mg-badge label="messages" value="2" variant="info"></mg-badge>
        </button>
        <button aria-controls="panel-2" aria-selected="false" class="mg-tabs__navigation-button" data-index="2" id="id-2" role="tab" tabindex="-1">
          <mg-icon icon="cross"></mg-icon>
          Joker
          <mg-badge label="messages" value="2" variant="info"></mg-badge>
        </button>
      </header>
      <article aria-labelledby="id-1" class="mg-tabs__content-container" id="panel-1" role="tabpanel" tabindex="0">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="id-2" class="mg-tabs__content-container" hidden="" id="panel-2" role="tabpanel" tabindex="-1">
        <slot name="tab_content-2"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next tab on click event 4`] = `
<mg-tabs active-tab="2">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="false" class="mg-tabs__navigation-button" data-index="1" id="id-1" role="tab" tabindex="-1">
          <mg-icon icon="check"></mg-icon>
          Batman
          <mg-badge label="messages" value="2" variant="info"></mg-badge>
        </button>
        <button aria-controls="panel-2" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="2" id="id-2" role="tab" tabindex="0">
          <mg-icon icon="cross"></mg-icon>
          Joker
          <mg-badge label="messages" value="2" variant="info"></mg-badge>
        </button>
      </header>
      <article aria-labelledby="id-1" class="mg-tabs__content-container" hidden="" id="panel-1" role="tabpanel" tabindex="-1">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="id-2" class="mg-tabs__content-container" id="panel-2" role="tabpanel" tabindex="0">
        <slot name="tab_content-2"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next tab on keyboard event 1`] = `
<mg-tabs active-tab="1">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="1" id="id-1" role="tab" tabindex="0">
          batman
        </button>
        <button aria-controls="panel-2" aria-selected="false" class="mg-tabs__navigation-button" data-index="2" id="id-2" role="tab" tabindex="-1">
          joker
        </button>
      </header>
      <article aria-labelledby="id-1" class="mg-tabs__content-container" id="panel-1" role="tabpanel" tabindex="0">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="id-2" class="mg-tabs__content-container" hidden="" id="panel-2" role="tabpanel" tabindex="-1">
        <slot name="tab_content-2"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next tab on keyboard event 2`] = `
<mg-tabs active-tab="1">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="1" id="id-1" role="tab" tabindex="0">
          batman
        </button>
        <button aria-controls="panel-2" aria-selected="false" class="mg-tabs__navigation-button" data-index="2" id="id-2" role="tab" tabindex="-1">
          joker
        </button>
      </header>
      <article aria-labelledby="id-1" class="mg-tabs__content-container" id="panel-1" role="tabpanel" tabindex="0">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="id-2" class="mg-tabs__content-container" hidden="" id="panel-2" role="tabpanel" tabindex="-1">
        <slot name="tab_content-2"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next tab on keyboard event 3`] = `
<mg-tabs active-tab="2">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="false" class="mg-tabs__navigation-button" data-index="1" id="id-1" role="tab" tabindex="-1">
          batman
        </button>
        <button aria-controls="panel-2" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="2" id="id-2" role="tab" tabindex="0">
          joker
        </button>
      </header>
      <article aria-labelledby="id-1" class="mg-tabs__content-container" hidden="" id="panel-1" role="tabpanel" tabindex="-1">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="id-2" class="mg-tabs__content-container" id="panel-2" role="tabpanel" tabindex="0">
        <slot name="tab_content-2"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next tab on keyboard event 4`] = `
<mg-tabs active-tab="1">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="1" id="id-1" role="tab" tabindex="0">
          batman
        </button>
        <button aria-controls="panel-2" aria-selected="false" class="mg-tabs__navigation-button" data-index="2" id="id-2" role="tab" tabindex="-1">
          joker
        </button>
      </header>
      <article aria-labelledby="id-1" class="mg-tabs__content-container" id="panel-1" role="tabpanel" tabindex="0">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="id-2" class="mg-tabs__content-container" hidden="" id="panel-2" role="tabpanel" tabindex="-1">
        <slot name="tab_content-2"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next visible tab, and keep focus if it's the last one on keyboard event 1`] = `
<mg-tabs active-tab="1">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="1" id="id-1" role="tab" tabindex="0">
          Batman
        </button>
        <button aria-controls="panel-2" aria-selected="false" class="mg-tabs__navigation-button" data-index="2" id="id-2" role="tab" tabindex="-1">
          Batman
        </button>
        <button aria-controls="panel-3" aria-selected="false" class="mg-tabs__navigation-button mg-tabs__navigation-button--hidden" data-index="3" id="id-3" role="tab" tabindex="-1">
          Batman
        </button>
      </header>
      <article aria-labelledby="id-1" class="mg-tabs__content-container" id="panel-1" role="tabpanel" tabindex="0">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="id-2" class="mg-tabs__content-container" hidden="" id="panel-2" role="tabpanel" tabindex="-1">
        <slot name="tab_content-2"></slot>
      </article>
      <article aria-labelledby="id-3" class="mg-tabs__content-container" hidden="" id="panel-3" role="tabpanel" tabindex="-1">
        <slot name="tab_content-3"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
  <div slot="tab_content-3">
    Content 3
  </div>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next visible tab, and keep focus if it's the last one on keyboard event 2`] = `
<mg-tabs active-tab="1">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="1" id="id-1" role="tab" tabindex="0">
          Batman
        </button>
        <button aria-controls="panel-2" aria-selected="false" class="mg-tabs__navigation-button" data-index="2" id="id-2" role="tab" tabindex="-1">
          Batman
        </button>
        <button aria-controls="panel-3" aria-selected="false" class="mg-tabs__navigation-button mg-tabs__navigation-button--hidden" data-index="3" id="id-3" role="tab" tabindex="-1">
          Batman
        </button>
      </header>
      <article aria-labelledby="id-1" class="mg-tabs__content-container" id="panel-1" role="tabpanel" tabindex="0">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="id-2" class="mg-tabs__content-container" hidden="" id="panel-2" role="tabpanel" tabindex="-1">
        <slot name="tab_content-2"></slot>
      </article>
      <article aria-labelledby="id-3" class="mg-tabs__content-container" hidden="" id="panel-3" role="tabpanel" tabindex="-1">
        <slot name="tab_content-3"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
  <div slot="tab_content-3">
    Content 3
  </div>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next visible tab, and keep focus if it's the last one on keyboard event 3`] = `
<mg-tabs active-tab="2">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="false" class="mg-tabs__navigation-button" data-index="1" id="id-1" role="tab" tabindex="-1">
          Batman
        </button>
        <button aria-controls="panel-2" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="2" id="id-2" role="tab" tabindex="0">
          Batman
        </button>
        <button aria-controls="panel-3" aria-selected="false" class="mg-tabs__navigation-button mg-tabs__navigation-button--hidden" data-index="3" id="id-3" role="tab" tabindex="-1">
          Batman
        </button>
      </header>
      <article aria-labelledby="id-1" class="mg-tabs__content-container" hidden="" id="panel-1" role="tabpanel" tabindex="-1">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="id-2" class="mg-tabs__content-container" id="panel-2" role="tabpanel" tabindex="0">
        <slot name="tab_content-2"></slot>
      </article>
      <article aria-labelledby="id-3" class="mg-tabs__content-container" hidden="" id="panel-3" role="tabpanel" tabindex="-1">
        <slot name="tab_content-3"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
  <div slot="tab_content-3">
    Content 3
  </div>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next visible tab, and keep focus if it's the last one on keyboard event 4`] = `
<mg-tabs active-tab="2">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="false" class="mg-tabs__navigation-button" data-index="1" id="id-1" role="tab" tabindex="-1">
          Batman
        </button>
        <button aria-controls="panel-2" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="2" id="id-2" role="tab" tabindex="0">
          Batman
        </button>
        <button aria-controls="panel-3" aria-selected="false" class="mg-tabs__navigation-button mg-tabs__navigation-button--hidden" data-index="3" id="id-3" role="tab" tabindex="-1">
          Batman
        </button>
      </header>
      <article aria-labelledby="id-1" class="mg-tabs__content-container" hidden="" id="panel-1" role="tabpanel" tabindex="-1">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="id-2" class="mg-tabs__content-container" id="panel-2" role="tabpanel" tabindex="0">
        <slot name="tab_content-2"></slot>
      </article>
      <article aria-labelledby="id-3" class="mg-tabs__content-container" hidden="" id="panel-3" role="tabpanel" tabindex="-1">
        <slot name="tab_content-3"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
  <div slot="tab_content-3">
    Content 3
  </div>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next visible tab, and keep focus if it's the last one on keyboard event 5`] = `
<mg-tabs active-tab="1">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="1" id="id-1" role="tab" tabindex="0">
          Batman
        </button>
        <button aria-controls="panel-2" aria-selected="false" class="mg-tabs__navigation-button" data-index="2" id="id-2" role="tab" tabindex="-1">
          Batman
        </button>
        <button aria-controls="panel-3" aria-selected="false" class="mg-tabs__navigation-button mg-tabs__navigation-button--disabled" data-index="3" disabled="" id="id-3" role="tab" tabindex="-1">
          Batman
        </button>
      </header>
      <article aria-labelledby="id-1" class="mg-tabs__content-container" id="panel-1" role="tabpanel" tabindex="0">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="id-2" class="mg-tabs__content-container" hidden="" id="panel-2" role="tabpanel" tabindex="-1">
        <slot name="tab_content-2"></slot>
      </article>
      <article aria-labelledby="id-3" class="mg-tabs__content-container" hidden="" id="panel-3" role="tabpanel" tabindex="-1">
        <slot name="tab_content-3"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
  <div slot="tab_content-3">
    Content 3
  </div>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next visible tab, and keep focus if it's the last one on keyboard event 6`] = `
<mg-tabs active-tab="1">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="1" id="id-1" role="tab" tabindex="0">
          Batman
        </button>
        <button aria-controls="panel-2" aria-selected="false" class="mg-tabs__navigation-button" data-index="2" id="id-2" role="tab" tabindex="-1">
          Batman
        </button>
        <button aria-controls="panel-3" aria-selected="false" class="mg-tabs__navigation-button mg-tabs__navigation-button--disabled" data-index="3" disabled="" id="id-3" role="tab" tabindex="-1">
          Batman
        </button>
      </header>
      <article aria-labelledby="id-1" class="mg-tabs__content-container" id="panel-1" role="tabpanel" tabindex="0">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="id-2" class="mg-tabs__content-container" hidden="" id="panel-2" role="tabpanel" tabindex="-1">
        <slot name="tab_content-2"></slot>
      </article>
      <article aria-labelledby="id-3" class="mg-tabs__content-container" hidden="" id="panel-3" role="tabpanel" tabindex="-1">
        <slot name="tab_content-3"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
  <div slot="tab_content-3">
    Content 3
  </div>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next visible tab, and keep focus if it's the last one on keyboard event 7`] = `
<mg-tabs active-tab="2">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="false" class="mg-tabs__navigation-button" data-index="1" id="id-1" role="tab" tabindex="-1">
          Batman
        </button>
        <button aria-controls="panel-2" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="2" id="id-2" role="tab" tabindex="0">
          Batman
        </button>
        <button aria-controls="panel-3" aria-selected="false" class="mg-tabs__navigation-button mg-tabs__navigation-button--disabled" data-index="3" disabled="" id="id-3" role="tab" tabindex="-1">
          Batman
        </button>
      </header>
      <article aria-labelledby="id-1" class="mg-tabs__content-container" hidden="" id="panel-1" role="tabpanel" tabindex="-1">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="id-2" class="mg-tabs__content-container" id="panel-2" role="tabpanel" tabindex="0">
        <slot name="tab_content-2"></slot>
      </article>
      <article aria-labelledby="id-3" class="mg-tabs__content-container" hidden="" id="panel-3" role="tabpanel" tabindex="-1">
        <slot name="tab_content-3"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
  <div slot="tab_content-3">
    Content 3
  </div>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next visible tab, and keep focus if it's the last one on keyboard event 8`] = `
<mg-tabs active-tab="2">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="false" class="mg-tabs__navigation-button" data-index="1" id="id-1" role="tab" tabindex="-1">
          Batman
        </button>
        <button aria-controls="panel-2" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="2" id="id-2" role="tab" tabindex="0">
          Batman
        </button>
        <button aria-controls="panel-3" aria-selected="false" class="mg-tabs__navigation-button mg-tabs__navigation-button--disabled" data-index="3" disabled="" id="id-3" role="tab" tabindex="-1">
          Batman
        </button>
      </header>
      <article aria-labelledby="id-1" class="mg-tabs__content-container" hidden="" id="panel-1" role="tabpanel" tabindex="-1">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="id-2" class="mg-tabs__content-container" id="panel-2" role="tabpanel" tabindex="0">
        <slot name="tab_content-2"></slot>
      </article>
      <article aria-labelledby="id-3" class="mg-tabs__content-container" hidden="" id="panel-3" role="tabpanel" tabindex="-1">
        <slot name="tab_content-3"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
  <div slot="tab_content-3">
    Content 3
  </div>
</mg-tabs>
`;

exports[`mg-tabs template display only slots with name "tab_content-*" 1`] = `
<mg-tabs active-tab="1">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="1" id="identifier-1" role="tab" tabindex="0">
          Batman
        </button>
        <button aria-controls="panel-2" aria-selected="false" class="mg-tabs__navigation-button" data-index="2" id="identifier-2" role="tab" tabindex="-1">
          Joker
        </button>
      </header>
      <article aria-labelledby="identifier-1" class="mg-tabs__content-container" id="panel-1" role="tabpanel" tabindex="0">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="identifier-2" class="mg-tabs__content-container" hidden="" id="panel-2" role="tabpanel" tabindex="-1">
        <slot name="tab_content-2"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
  <div>
    dummy content
  </div>
</mg-tabs>
`;

exports[`mg-tabs template display only slots with name "tab_content-*" 2`] = `
<mg-tabs active-tab="1">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="1" id="identifier-1" role="tab" tabindex="0">
          Batman
        </button>
        <button aria-controls="panel-2" aria-selected="false" class="mg-tabs__navigation-button" data-index="2" id="identifier-2" role="tab" tabindex="-1">
          Joker
        </button>
      </header>
      <article aria-labelledby="identifier-1" class="mg-tabs__content-container" id="panel-1" role="tabpanel" tabindex="0">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="identifier-2" class="mg-tabs__content-container" hidden="" id="panel-2" role="tabpanel" tabindex="-1">
        <slot name="tab_content-2"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
  <div>
    dummy content
  </div>
</mg-tabs>
`;

exports[`mg-tabs template display tabs with activeProps set by props 1`] = `
<mg-tabs active-tab="2">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="false" class="mg-tabs__navigation-button" data-index="1" id="identifier-1" role="tab" tabindex="-1">
          Tab 1
        </button>
        <button aria-controls="panel-2" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="2" id="identifier-2" role="tab" tabindex="0">
          Tab 2
        </button>
        <button aria-controls="panel-3" aria-selected="false" class="mg-tabs__navigation-button" data-index="3" id="identifier-3" role="tab" tabindex="-1">
          Tab 3
        </button>
      </header>
      <article aria-labelledby="identifier-1" class="mg-tabs__content-container" hidden="" id="panel-1" role="tabpanel" tabindex="-1">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="identifier-2" class="mg-tabs__content-container" id="panel-2" role="tabpanel" tabindex="0">
        <slot name="tab_content-2"></slot>
      </article>
      <article aria-labelledby="identifier-3" class="mg-tabs__content-container" hidden="" id="panel-3" role="tabpanel" tabindex="-1">
        <slot name="tab_content-3"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
  <div slot="tab_content-3">
    Content 3
  </div>
</mg-tabs>
`;

exports[`mg-tabs template display tabs with activeProps set by props 2`] = `
<mg-tabs active-tab="2">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="false" class="mg-tabs__navigation-button" data-index="1" id="identifier-1" role="tab" tabindex="-1">
          Tab 1
        </button>
        <button aria-controls="panel-2" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="2" id="identifier-2" role="tab" tabindex="0">
          Tab 2
        </button>
        <button aria-controls="panel-3" aria-selected="false" class="mg-tabs__navigation-button" data-index="3" id="identifier-3" role="tab" tabindex="-1">
          Tab 3
        </button>
      </header>
      <article aria-labelledby="identifier-1" class="mg-tabs__content-container" hidden="" id="panel-1" role="tabpanel" tabindex="-1">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="identifier-2" class="mg-tabs__content-container" id="panel-2" role="tabpanel" tabindex="0">
        <slot name="tab_content-2"></slot>
      </article>
      <article aria-labelledby="identifier-3" class="mg-tabs__content-container" hidden="" id="panel-3" role="tabpanel" tabindex="-1">
        <slot name="tab_content-3"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
  <div slot="tab_content-3">
    Content 3
  </div>
</mg-tabs>
`;

exports[`mg-tabs template render 1`] = `
<mg-tabs active-tab="1">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="1" id="identifier-1" role="tab" tabindex="0">
          Batman
        </button>
        <button aria-controls="panel-2" aria-selected="false" class="mg-tabs__navigation-button" data-index="2" id="identifier-2" role="tab" tabindex="-1">
          Joker
        </button>
        <button aria-controls="panel-3" aria-selected="false" class="mg-tabs__navigation-button" data-index="3" id="identifier-3" role="tab" tabindex="-1">
          Bane
        </button>
      </header>
      <article aria-labelledby="identifier-1" class="mg-tabs__content-container" id="panel-1" role="tabpanel" tabindex="0">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="identifier-2" class="mg-tabs__content-container" hidden="" id="panel-2" role="tabpanel" tabindex="-1">
        <slot name="tab_content-2"></slot>
      </article>
      <article aria-labelledby="identifier-3" class="mg-tabs__content-container" hidden="" id="panel-3" role="tabpanel" tabindex="-1">
        <slot name="tab_content-3"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
  <div slot="tab_content-3">
    Content 3
  </div>
</mg-tabs>
`;

exports[`mg-tabs template render 2`] = `
<mg-tabs active-tab="1">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-regular">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="1" id="identifier-1" role="tab" tabindex="0">
          <mg-icon icon="check"></mg-icon>
          Batman
          <mg-badge label="messages" value="2" variant="info"></mg-badge>
        </button>
        <button aria-controls="panel-2" aria-selected="false" class="mg-tabs__navigation-button mg-tabs__navigation-button--disabled" data-index="2" disabled="" id="identifier-2" role="tab" tabindex="-1">
          <mg-icon icon="cross"></mg-icon>
          Joker
          <mg-badge label="messages" value="2" variant="info"></mg-badge>
        </button>
        <button aria-controls="panel-3" aria-selected="false" class="mg-tabs__navigation-button mg-tabs__navigation-button--hidden" data-index="3" id="identifier-3" role="tab" tabindex="-1">
          <mg-icon icon="trash"></mg-icon>
          Bane
          <mg-badge label="messages" value="2" variant="info"></mg-badge>
        </button>
      </header>
      <article aria-labelledby="identifier-1" class="mg-tabs__content-container" id="panel-1" role="tabpanel" tabindex="0">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="identifier-2" class="mg-tabs__content-container" hidden="" id="panel-2" role="tabpanel" tabindex="-1">
        <slot name="tab_content-2"></slot>
      </article>
      <article aria-labelledby="identifier-3" class="mg-tabs__content-container" hidden="" id="panel-3" role="tabpanel" tabindex="-1">
        <slot name="tab_content-3"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
  <div slot="tab_content-3">
    Content 3
  </div>
</mg-tabs>
`;

exports[`mg-tabs template render 3`] = `
<mg-tabs active-tab="1">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-large">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="1" id="identifier-1" role="tab" tabindex="0">
          Batman
        </button>
        <button aria-controls="panel-2" aria-selected="false" class="mg-tabs__navigation-button" data-index="2" id="identifier-2" role="tab" tabindex="-1">
          Joker
        </button>
        <button aria-controls="panel-3" aria-selected="false" class="mg-tabs__navigation-button" data-index="3" id="identifier-3" role="tab" tabindex="-1">
          Bane
        </button>
      </header>
      <article aria-labelledby="identifier-1" class="mg-tabs__content-container" id="panel-1" role="tabpanel" tabindex="0">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="identifier-2" class="mg-tabs__content-container" hidden="" id="panel-2" role="tabpanel" tabindex="-1">
        <slot name="tab_content-2"></slot>
      </article>
      <article aria-labelledby="identifier-3" class="mg-tabs__content-container" hidden="" id="panel-3" role="tabpanel" tabindex="-1">
        <slot name="tab_content-3"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
  <div slot="tab_content-3">
    Content 3
  </div>
</mg-tabs>
`;

exports[`mg-tabs template render 4`] = `
<mg-tabs active-tab="1">
  <mock:shadow-root>
    <div class="mg-tabs mg-tabs--size-large">
      <header aria-label="Sample label" class="mg-tabs__header" role="tablist">
        <button aria-controls="panel-1" aria-selected="true" class="mg-tabs__navigation-button mg-tabs__navigation-button--active" data-index="1" id="identifier-1" role="tab" tabindex="0">
          <mg-icon icon="check"></mg-icon>
          Batman
          <mg-badge label="messages" value="2" variant="info"></mg-badge>
        </button>
        <button aria-controls="panel-2" aria-selected="false" class="mg-tabs__navigation-button mg-tabs__navigation-button--disabled" data-index="2" disabled="" id="identifier-2" role="tab" tabindex="-1">
          <mg-icon icon="cross"></mg-icon>
          Joker
          <mg-badge label="messages" value="2" variant="info"></mg-badge>
        </button>
        <button aria-controls="panel-3" aria-selected="false" class="mg-tabs__navigation-button mg-tabs__navigation-button--hidden" data-index="3" id="identifier-3" role="tab" tabindex="-1">
          <mg-icon icon="trash"></mg-icon>
          Bane
          <mg-badge label="messages" value="2" variant="info"></mg-badge>
        </button>
      </header>
      <article aria-labelledby="identifier-1" class="mg-tabs__content-container" id="panel-1" role="tabpanel" tabindex="0">
        <slot name="tab_content-1"></slot>
      </article>
      <article aria-labelledby="identifier-2" class="mg-tabs__content-container" hidden="" id="panel-2" role="tabpanel" tabindex="-1">
        <slot name="tab_content-2"></slot>
      </article>
      <article aria-labelledby="identifier-3" class="mg-tabs__content-container" hidden="" id="panel-3" role="tabpanel" tabindex="-1">
        <slot name="tab_content-3"></slot>
      </article>
    </div>
  </mock:shadow-root>
  <div slot="tab_content-1">
    Content 1
  </div>
  <div slot="tab_content-2">
    Content 2
  </div>
  <div slot="tab_content-3">
    Content 3
  </div>
</mg-tabs>
`;
